opacity + z-index fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -39,7 +39,7 @@
   &__logo-wrap {
     display: flex;
     height: 46px;
-    z-index: 10;
+    z-index: 10;  //z-index
 
     @media (min-width: 500px) {
       height: 60px;
@@ -57,12 +57,13 @@
   &__logo {
     @extend %img;
     object-fit: contain;
-    z-index: 0;
+    z-index: 0;  //z-index
   }
 
   &__phone {
     display: flex;
     position: relative;
+    z-index: 3;
 
     @media (min-width: 600px) {
       &::before {
@@ -90,7 +91,7 @@
   &__title-wrap {
     grid-area: title;
     position: relative;
-    z-index: 0;
+    z-index: 0;  //z-index
 
     &::before {
       position: absolute;
@@ -104,7 +105,7 @@
   }
 
   &__title {
-    z-index: 0;
+    z-index: 0;  //z-index
     color: $c-white;
     font-size: 46px;
     line-height: 40px;
@@ -120,7 +121,7 @@
   }
 
   &__toggler-label {
-    z-index: 10;
+    z-index: 10;  //z-index
     cursor: pointer;
     width: 24px;
     height: 24px;
@@ -153,7 +154,7 @@
     top: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 5;
+    z-index: 3;  //z-index
     transition-duration: 0.7s;
     transition-timing-function: linear;
   }
@@ -210,7 +211,7 @@
   }
 
   &__list {
-    z-index: 10;
+    z-index: 10;   //z-index
     position: absolute;
     opacity: 0;
     top: 120px;
@@ -225,6 +226,7 @@
 
   &__toggler:checked ~ &__nav {
     opacity: 100%;
+    z-index: 5;
   }
 
   &__toggler:checked ~ &__list {
